--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
